--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ h1 {
   text-align: ;
   transform: scale(0.94);
   animation: scale 2s forwards cubic-bezier(0.5, 1, 0.89, 1);
+  font-weight: normal;
   
 
   
@@ -186,7 +187,8 @@ span:nth-child(18) {
           <div id="myDIV"></div>
 
 <! Om det står (/span) här under gör skillnad på vad som omfattas av fade-in.->
-
+    
+<i><h1>inadvertent.index</h1></i>
 
 <style>
           ul {
