--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ span:nth-child(18) {
         <li><a href=https://www.ubu.com/film/basinski_loops.html>‿︵‿︵‿︵‿︵</a></li>
         <li><a href=https://www.nature.com/articles/s42256-020-0164-7>Edmond de Belamy</a></li>
         <li><a href=https://musictales.club/article/emotion-over-meaning-enigmatic-lyrics-cocteau-twins-languages-glossolalia>glossolalia</a></li>
-        <li><a href="invisibilia.html">pareidolia</a></li>
+        <li><a href="assets/invisibilia.html">pareidolia</a></li>
         <li><a href=https://en.wikipedia.org/wiki/Acousmatic_sound>akousmatikoi (hearers)</a></li>
         <li><a href=https://www.soundonsound.com/people/oval-markus-popp>0valpr0cess</a></li>
         <li><a href=https://www.ubu.com/historical/gb/russolo_noise.pdf>My dear Balilla Pratella</a></li>
