--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@ span:nth-child(18) {
         <li><a href=https://www.ubu.com/papers/Feldman-Morton_Xenakis-Iannis.pdf> an empty glass of water</a></li>
         <li><a href=https://www.electronicbeats.net/the-modern-church-nightclub> eyes shut</a></li>
         <li><a href=https://hii-mag.com> flood vanish reboot</a></li>
-        <li><a href="asset/lost.html"> lost</a></li>
+        <li><a href="assets/lost.html"> lost</a></li>
         <li><a href=https://www.thewire.co.uk/in-writing/interviews/burial_unedited-transcript> you remind me of gold</a></li>
         <li><a href=http://www.akirarabelais.com/o/software/al.html>X^x</a></li>
         <li><a href=https://i.pinimg.com/originals/05/a3/9e/05a39ec902360cdfabb544e16365920b.jpg>*.*</a></li>
         <li><a href=https://brrr.money>𓃰</a></li>
         <li><a href=https://crackmagazine.net/article/profiles/beatrice-dillon-playing-opposites/?fbclid=IwAR191qtsRHd__N6auEooROpwSDkq5Xa1Sdez7sHoqwGF-Acnw-jDnRaJf0k>euclidian</a></li>   
         <li><a href=https://what3words.com/juke.crispest.forecasting>juke.crispest.forecasting</a></li>
-        <li><a href="asset/flashw33k.html">𓏢</a></li>
+        <li><a href="assets/flashw33k.html">𓏢</a></li>
         <li><a href=https://www.book2look.com/book/pqxA9D7op1>    .</a></li>
         <li><a href=https://s9.imslp.org/files/imglnks/usimg/5/54/IMSLP72394-PMLP144382-Prelude_for_Organ-Reedit.mp3>[vocalizing]</a></li>
         <li><a href=https://imslp.org/index.php?title=Category:People_with_recordings&memberitst=Recordings>loadbang</a></li>
@@ -220,9 +220,9 @@ span:nth-child(18) {
         <li><a href=https://artsandculture.google.com/experiment/blob-opera/AAHWrq360NcGbw?cp=eyJyIjoiSWdyUzJzN1lKTHc3In0.>( ͡~ ͜ʖ ͡°)</a></li>
         <li><a href=https://web.archive.org/web/20090629195958/http://clinton2.nara.gov/Initiatives/Millennium/shawking.html#>spock fever</a></li>
         <li><a href=https://voyager.jpl.nasa.gov/assets/images/golden-record/record-diagram.jpg>1:1</a></li>
-        <li><a href="asset/tetsu2.html">≋</a></li>
+        <li><a href="assets/tetsu2.html">≋</a></li>
         <li><a href=https://ubusound.memoryoftheworld.org/cardew_cornelius/bbc/Cardew-Cornelius_BBC-Archive_02_A-Composers-Portrait_Treatise.mp3>hear me out</a></li>
-        <li><a href="asset/tetsu.html">𓅰</a></li>
+        <li><a href="assets/tetsu.html">𓅰</a></li>
         <li><a href=https://www.ubu.com/film/basinski_loops.html>‿︵‿︵‿︵‿︵</a></li>
         <li><a href=https://www.nature.com/articles/s42256-020-0164-7>Edmond de Belamy</a></li>
         <li><a href=https://musictales.club/article/emotion-over-meaning-enigmatic-lyrics-cocteau-twins-languages-glossolalia>glossolalia</a></li>
@@ -246,7 +246,7 @@ span:nth-child(18) {
         <li><a href=https://monoskop.org/images/8/85/Wark_McKenzie_A_Hacker_Manifesto.pdf>A_Hacker_Manifesto.pdf</a></li>
         <li><a href=https://artreview.com/when-critics-use-i/>"I"</a></li>
         <li><a href=https://ra.co/features/3921>neo-feudal lords</a></li>
-        <li><a href="asset/zoes-links.html">Zoe Lorenz (they/she/fae/it)</a></li>
+        <li><a href="assets/zoes-links.html">Zoe Lorenz (they/she/fae/it)</a></li>
         <li><a href=https://www.youtube.com/watch?v=Y4YLy7kqcr8>mc.*~</a></li>
         <li><a href="https://rentistheft.org/for-the-sake-of-argument-freetown-christiana-770abbe84d30">◯ ◯ ◯</a></li>
         <li><a href="http://ajaxsoundstudio.com/software/cecilia/">Cecilia 5</a></li>
