--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@ span:nth-child(18) {
         <li><a href="https://addpmp.slamjam.com/">ADDPMP</a></li>
         <li><a href="https://www.youtube.com/watch?v=AoLVbiRVots&t=5652s">hidden compositions</a></li>
         <li><a href="https://interdependence.fm/episodes/primacism-david-rudnick-on-the-struggle-for-primacy-type-and-poetrys-unique-value-in-an-age-of-digital-and-physical-conflict-and-percy-shelleys-mont-blanc-cwpBIPGY">primacy ...</a></li>
-    
+        <li><a href="https://ra.co/features/3627">∞ ∞ ∞ and on!</a></li>
+        <li><a href="https://ra.co/features/3627">∞ ∞ ∞ and on!</a></li>
 
        
 
