--- a/index.html
+++ b/index.html
@@ -263,9 +263,11 @@ span:nth-child(18) {
         <li><a href="https://addpmp.slamjam.com/">ADDPMP</a></li>
         <li><a href="https://www.youtube.com/watch?v=AoLVbiRVots&t=5652s">hidden compositions</a></li>
         <li><a href="https://interdependence.fm/episodes/primacism-david-rudnick-on-the-struggle-for-primacy-type-and-poetrys-unique-value-in-an-age-of-digital-and-physical-conflict-and-percy-shelleys-mont-blanc-cwpBIPGY">primacy ...</a></li>
-        <li><a href="https://ra.co/features/3627">∞ ∞ ∞ and on!</a></li>
-        <li><a href="https://ra.co/features/3627">∞ ∞ ∞ and on!</a></li>
-
+        <li><a href="https://www.sunyoungkim.org/class/old/hci_f18/pdf/The-Design-of-Everyday-Things-Revised-and-Expanded-Edition.pdf">Ceci n'est pas une pipe</a></li>
+        <li><a href="https://www.soundonsound.com/people/autechre">Booth & Brown</a></li>
+        <li><a href="https://www.youtube.com/watch?v=3SJQgfEib9w">audio / video</a></li>
+        <li><a href="https://www.youtube.com/channel/UCqIZ33Ukys9zIngle-NCqdA">agy.web</a></li>
+        <li><a href="https://www.youtube.com/watch?v=_PkgQQqpH2M&t=48s">shutter speed + fps</a></li>
        
 
 
