--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ span:nth-child(18) {
         <li><a href="https://huggingface.co/spaces/dalle-mini/dalle-mini">prompt: Magic Dog In Moonlight</a></li>
         <li><a href="https://ra.co/news/76439">'Music Is Being Used As A Weapon'</a></li>
         <li><a href="https://open.spotify.com/artist/5R8e4zGCS3to4jkPB88msq?si=0ZndBaUNREaMAfVehgEvDA">Algorhitmic Curation – '174-963'</a></li>
-
+        <li><a href="https://spatial.io/s/merzDALLEum-625fed192ce7250001cc16ee?share=6035801166881251211">Pictures at an Exhibition</a></li>
 
 
 </ul>
