--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@ span:nth-child(18) {
         <li><a href="https://open.spotify.com/artist/5R8e4zGCS3to4jkPB88msq?si=0ZndBaUNREaMAfVehgEvDA">Algorhitmic Curation – '174-963'</a></li>
         <li><a href="https://spatial.io/s/merzDALLEum-625fed192ce7250001cc16ee?share=6035801166881251211">Pictures at an Exhibition</a></li>
         <li><a href="https://towardsdatascience.com/dall-e-an-ai-treasure-chest-in-action-894c3a9cca92">(text-to-image)</a></li>
+        <li><a href="https://www.instagram.com/p/CdpCVNiOXEs/">Globalism Peak</a></li>
+        <li><a href="https://www.dazeddigital.com/music/article/56370/1/beyonce-comes-out-as-anti-capitalist-break-my-soul-new-single">ooOOooOOOoooo Hard to Say...</a></li>
+        <li><a href="https://artreview.com/how-culture-went-back-to-the-middle-ages/">Hieronymus Bosch, ‘The Garden of Earthly Delights’</a></li>
 
 </ul>
 
