--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@ span:nth-child(18) {
         <li><a href="https://www.dazeddigital.com/music/article/56370/1/beyonce-comes-out-as-anti-capitalist-break-my-soul-new-single">ooOOooOOOoooo Hard to Say...</a></li>
         <li><a href="https://artreview.com/how-culture-went-back-to-the-middle-ages/">Hieronymus Bosch, ‘The Garden of Earthly Delights’</a></li>
         <li><a href="https://virtualvacation.us/guess">virtual vacation / guess</a></li>    
+        <li><a href="https://www.youtube.com/watch?v=v0BvURnURPw">the starting point - thank you</a></li> 
 
 </ul>
 
