--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@ span:nth-child(18) {
         <li><a href="https://direct.mit.edu/comj/article/32/3/87/94223/A-Tutorial-on-Spectral-Sound-Processing-Using-Max">A Tutorial on Spectral Sound Processing</a></li>
         <li><a href="https://artreview.com/nasa-sound-of-a-black-hole-investigation/">Which Way is UP????</a></li> 
         <li><a href="https://www.youtube.com/watch?v=RN4AVFt32og">AudioSculpt Cult! <:-)=</a></li> 
+        <li><a href="https://www.youtube.com/watch?v=F0yagCM4c-s">Slit Scan Camera=</a></li> 
+        <li><a href="https://www.youtube.com/watch?v=QGNgINohags">not distance, but visual time</a></li> 
 
 </ul>
 
