--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@ span:nth-child(18) {
         <li><a href="https://www.youtube.com/watch?v=RN4AVFt32og">AudioSculpt Cult! <:-)=</a></li> 
         <li><a href="https://www.youtube.com/watch?v=F0yagCM4c-s">Slit Scan Camera=</a></li> 
         <li><a href="https://www.youtube.com/watch?v=QGNgINohags">not distance, but visual time</a></li> 
+        <li><a href="https://oddsound.com/mtsespsuite.php">mts-esp</a></li>
+        <li><a href="https://gitlab.com/then-try-this/samplebrain">samplebrain / richard d. james_dave griffiths</a></li>
 
 </ul>
 
