--- a/index.html
+++ b/index.html
@@ -293,6 +293,10 @@ span:nth-child(18) {
         <li><a href="https://www.youtube.com/watch?v=QGNgINohags">not distance, but visual time</a></li> 
         <li><a href="https://oddsound.com/mtsespsuite.php">mts-esp</a></li>
         <li><a href="https://gitlab.com/then-try-this/samplebrain">samplebrain / richard d. james_dave griffiths</a></li>
+        <li><a href="http://www.piano-midi.de/midi_files.htm">claire de lune.mid</a></li>
+        <li><a href="https://www.youtube.com/watch?v=PnWWh3C9jvk">∞∞∞∞∞ markov chains ∞∞∞∞∞</a></li>
+        
+        
 
 </ul>
 
