--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@ span:nth-child(18) {
         <li><a href="http://www.piano-midi.de/midi_files.htm">claire de lune.mid</a></li>
         <li><a href="https://www.youtube.com/watch?v=PnWWh3C9jvk">∞∞∞∞∞ markov chains ∞∞∞∞∞</a></li>
         <li><a href="https://basicpitch.spotify.com/">audio -> midi</a></li>
-        <li><a href="https://beta.openai.com/playground"></a></li>
+        <li><a href="https://beta.openai.com/playground">caption this</a></li>
+        <li><a href="https://www.youtube.com/watch?v=aCgkLICTskQ">slow cancellation of the future</a></li>
+
         
         
 
