--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@ span:nth-child(18) {
         <li><a href="https://basicpitch.spotify.com/">audio -> midi</a></li>
         <li><a href="https://beta.openai.com/playground">caption this</a></li>
         <li><a href="https://www.youtube.com/watch?v=aCgkLICTskQ">slow cancellation of the future</a></li>
+        <li><a href="https://www.youtube.com/watch?v=9Yh5mEOE_Xc">Claire Rousay / La Meme Young</a></li>
+        <li><a href="https://www.youtube.com/watch?v=spUNpyF58BY&t=314s">center of mass ––––– fourier transform</a></li>
 
         
         
