--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@ span:nth-child(18) {
         <li><a href="https://www.youtube.com/watch?v=9Yh5mEOE_Xc">Claire Rousay / La Meme Young</a></li>
         <li><a href="https://www.youtube.com/watch?v=spUNpyF58BY&t=314s">center of mass ––––– fourier transform</a></li>
         <li><a href="https://queue.acm.org/detail.cfm?id=3477229">curation-creation</a></li>
-
-        
+        <li><a href="https://www.youtube.com/watch?v=cnH2ltfW48U">modes on a string</a></li>
+        <li><a href="https://www.youtube.com/watch?v=dwE4Jwk_zeI">long thin wire</a></li>
         
 
 </ul>
