--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
             <li><a href="https://queue.acm.org/detail.cfm?id=3477229">curation-creation</a></li>
             <li><a href="https://www.youtube.com/watch?v=cnH2ltfW48U">modes on a string</a></li>
             <li><a href="https://www.youtube.com/watch?v=dwE4Jwk_zeI">long thin wire</a></li>
+            <li><a href="https://ninaprotocol.com/">"A new internet of music"</a></li>
+            <li><a href="https://www.youtube.com/watch?v=yS_c2qqA-6Y">"HyperNormalisation by Adam Curtis HD Full [2016] [Subs]"</a></li>
+            <li><a href="https://www.youtube.com/watch?v=68BMUPWMnyg">"06-08-2003 Haight Ashbury Street Fair San Francisco"</a></li>
 
 
         </ul>
