--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>i.i</title>
+    <title>✿ ✳ ✿ ✳ ✿ ✳ ✿ ✳ ✿</title>
     <link rel="icon" href="secret.png">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,9 +21,9 @@
         <div id="myDIV"></div>
 
 
-        <i>
+   
             <h1>inadvertent.index</h1>
-        </i>
+   
 
 
 
