--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
 
 
-            <a href="">[mix0001] – 'guitar music'</a>
+            <a href="">[0001] – 'guitar music'</a>
 
         <ul>
           
