--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>✿ ✳ ✿ ✳ ✿ ✳ ✿ ✳ ✿</title>
+    <title>✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿</title>
     <link rel="icon" href="secret.png">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
