--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
 
 
-            <a href="https://soundcloud.com/inadvertent-index/0001-guitar-music/s-rfyFEPemq9h?si=a78dca21be9d4c4f8cade2a37ac94907&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">[0001] – 'guitar music'</a>
+            <a href="https://soundcloud.com/inadvertent-index/0001-guitar-music">[0001] – 'guitar music'</a>
 
         <ul>
           
