--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             <li><a href="https://www.youtube.com/watch?v=yS_c2qqA-6Y">"HyperNormalisation by Adam Curtis HD Full [2016] [Subs]"</a></li>
             <li><a href="https://www.youtube.com/watch?v=68BMUPWMnyg">"06-08-2003 Haight Ashbury Street Fair San Francisco"</a></li>
             <li><a href="https://www.youtube.com/watch?v=XnuYJx9ObFc">MADE OF AIR</a></li>
+            <li><a href="https://artreview.com/the-mousetrap-mickey-mouse-copyright-public-domain/?utm_campaign=later-linkinbio-artreview_magazine&utm_content=later-40672938&utm_medium=social&utm_source=linkin.bio">Mickey’s freedom is narrow.</a></li>
         
 
         </ul>
