--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
             <li><a href="https://www.youtube.com/watch?v=XnuYJx9ObFc">MADE OF AIR</a></li>
             <li><a href="https://artreview.com/the-mousetrap-mickey-mouse-copyright-public-domain/?utm_campaign=later-linkinbio-artreview_magazine&utm_content=later-40672938&utm_medium=social&utm_source=linkin.bio">Mickey’s freedom is narrow.</a></li>
             <li><a href="https://www.youtube.com/watch?v=lfk1b65lb-M&t=929s">I shall carry this dream with me until it's a reality</a></li>
-
+            <li><a href="https://petertalisman.quest/">Lord Of The Harvest.quest</a></li>
+            <li><a href="https://lines.chromeexperiments.com/">lines.experiment</a></li>
         </ul>
 
     </span>
